--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "material-ui-icons": "^1.0.0-beta.36",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
-    "react-scripts": "2.0.5"
+    "react-scripts": "2.0.5",
+    "underscore": "^1.9.1"
   },
   "scripts": {
     "start": "react-scripts start",
