--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^3.3.1",
     "@material-ui/icons": "^3.0.1",
+    "lodash": "^4.17.11",
     "material-ui-icons": "^1.0.0-beta.36",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
