--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-scripts": "2.0.5",
+    "react-scrollable-anchor": "^0.6.1",
     "underscore": "^1.9.1"
   },
   "scripts": {
